<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.jonplonk.obfuscated.SelectDifficulty"
    android:background="#ff22801d">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_prompt_1"
        android:id="@+id/select_prompt_1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="80dp"
        android:textColor="#FFF"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_prompt_2"
        android:id="@+id/select_prompt_2"
        android:textSize="80dp"
        android:textColor="#FFF"
        android:textStyle="bold"
        android:layout_below="@+id/select_prompt_1"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="230dp"
        android:layout_height="115dp"
        android:minWidth="230dp"
        android:text="@string/easy_b"
        android:textStyle="bold"
        android:id="@+id/easy_button"
        android:layout_below="@+id/select_prompt_2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="60dp"
        android:layout_marginTop="15dp"
        android:background="#ff48ff61"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="15dp" />

    <Button
        android:layout_width="230dp"
        android:layout_height="115dp"
        android:minWidth="230dp"
        android:text="@string/med_b"
        android:textStyle="bold"
        android:id="@+id/medium_button"
        android:layout_below="@+id/easy_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="47dp"
        android:background="#fffff037"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="15dp" />

    <Button
        android:layout_width="230dp"
        android:layout_height="115dp"
        android:minWidth="230dp"
        android:text="@string/hard_b"
        android:textStyle="bold"
        android:id="@+id/hard_button"
        android:layout_below="@+id/medium_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="60dp"
        android:background="#ffff1710"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="15dp" />

    <Button
        android:layout_width="230dp"
        android:layout_height="115dp"
        android:minWidth="230dp"
        android:text="@string/imp_b"
        android:textStyle="bold"
        android:id="@+id/impossible_button"
        android:layout_below="@+id/hard_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="35dp"
        android:textColor="#FFF"
        android:background="#000"
        android:layout_marginLeft="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/easy_desc"
        android:id="@+id/easy_desc"
        android:textColor="#FFF"
        android:textSize="25dp"
        android:layout_alignTop="@+id/easy_button"
        android:layout_alignRight="@+id/select_prompt_1"
        android:layout_alignEnd="@+id/select_prompt_1"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/med_desc"
        android:id="@+id/med_desc"
        android:textColor="#FFF"
        android:textSize="25dp"
        android:layout_alignTop="@+id/medium_button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hard_desc"
        android:id="@+id/hard_desc"
        android:textColor="#FFF"
        android:textSize="25dp"
        android:layout_alignTop="@+id/hard_button"
        android:layout_alignLeft="@+id/med_desc"
        android:layout_alignStart="@+id/med_desc"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/imp_desc"
        android:id="@+id/imp_desc"
        android:textColor="#FFF"
        android:textSize="25dp"
        android:layout_alignTop="@+id/impossible_button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp" />
</RelativeLayout>
