<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.jonplonk.obfuscated.GameOver"
    android:background="#ff262d92">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_over"
        android:id="@+id/game_over"
        android:textSize="85dp"
        android:textStyle="bold"
        android:layout_marginTop="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fscore_desc"
        android:id="@+id/fscore_desc"
        android:textSize="45dp"
        android:layout_below="@+id/game_over"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:textStyle="bold"
        android:textColor="#ffffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/final_score"
        android:id="@+id/final_score"
        android:textSize="80dp"
        android:textStyle="bold"
        android:textColor="#ffffffff"
        android:layout_below="@+id/fscore_desc"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/goodbye"
        android:id="@+id/goodbye"
        android:textSize="40dp"
        android:layout_marginTop="50dp"
        android:textStyle="bold"
        android:textColor="#ffffffff"
        android:gravity="center_vertical|center_horizontal"
        android:layout_below="@+id/final_score"
        android:layout_toRightOf="@+id/replay_button"
        android:layout_toEndOf="@+id/replay_button" />

    <Button
        android:layout_width="200dp"
        android:layout_height="180dp"
        android:text="@string/replay"
        android:id="@+id/replay_button"
        android:textColor="#000"
        android:textStyle="bold"
        android:textSize="40dp"
        android:background="#ff52b6ff"
        android:layout_alignBottom="@+id/goodbye"
        android:layout_alignLeft="@+id/game_over"
        android:layout_alignStart="@+id/game_over" />

    <Button
        android:layout_width="170dp"
        android:layout_height="90dp"
        android:text="@string/exit"
        android:id="@+id/exit_button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="40dp"
        android:background="#ff52b6ff" />

</RelativeLayout>
