<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="horizontal"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Welcome"
    android:background="#ffa91a15">

    <!-- <TextView android:id="@+id/game_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/game_title"
        android:layout_gravity="center_horizontal"
        android:textSize="95dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textColor="#ffffffff"
        android:textColorHint="#ffffffff" /> -->

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="360dp"
        android:id="@+id/obf_logo"
        android:src="@drawable/logo2"
        android:contentDescription="@string/go"
        android:scaleType="fitXY"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/how_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/welcome_rules"
        android:layout_gravity="center_horizontal"
        android:textSize="55dp"
        android:layout_below="@+id/obf_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:textColor="#ffffffff"
        android:textColorHint="#ffffffff"
        android:textStyle="bold"
        android:layout_marginBottom="4dp" />

    <TextView
        android:id="@+id/rules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/rules_full"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/how_to"
        android:textSize="26dp"
        android:textColor="#ffffffff"
        android:textColorHint="#ffffffff"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="6dp" />

    <TextView
        android:id="@+id/prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_go"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/rules"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="#ffffffff"
        android:textColorHint="#ffffffff"
        android:gravity="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go"
        android:id="@+id/go_button"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/prompt"
        android:width="250dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="5dp"
        android:textSize="60dp"
        android:background="#ffff3123"
        android:textColor="#ffffffff"
        android:layout_alignParentRight="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/howto"
        android:id="@+id/tutorial_button"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/prompt"
        android:width="250dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="5dp"
        android:textSize="60dp"
        android:background="#ffff3123"
        android:textColor="#ffffffff"
        android:layout_alignParentLeft="true" />

</RelativeLayout>
